--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,16 @@ spring.application.name=BackDownloadMusicMp3
 
 # --- BASE DE DATOS (RENDER) ---
 # Usamos las variables de entorno que definimos en el dashboard
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- JPA / HIBERNATE ---
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
 # --- OPTIMIZACION DE MEMORIA (CRITICO) ---
 
