Variables en properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ server.tomcat.threads.min-spare=2
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.open-in-view=false
+
+app.tools.ytdlp=/usr/local/bin/yt-dlp
+app.tools.ffmpeg=/usr/bin/ffmpeg
