--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,17 @@
-# --- CONFIGURACION GENERAL ---
 spring.application.name=BackDownloadMusicMp3
+server.port=8080
 
-# --- BASE DE DATOS (RENDER) ---
-# Usamos las variables de entorno que definimos en el dashboard
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-#spring.datasource.driver-class-name=org.postgresql.Driver
+# --- RUTAS LOCALES (WINDOWS) ---
+# Java requiere barras normales '/' o doble barra invertida '\\'.
+# He configurado la ruta exacta que me diste:
 
-# --- JPA / HIBERNATE ---
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Ruta al ejecutable de yt-dlp
+app.tools.ytdlp=C:/Users/Diego/Documents/ffmpeg-2025-12-18-git-78c75d546a-full_build/bin/yt-dlp.exe
 
+# Ruta a la CARPETA donde está ffmpeg.exe (usualmente la misma que yt-dlp)
+app.tools.ffmpeg=C:/Users/Diego/Documents/ffmpeg-2025-12-18-git-78c75d546a-full_build/bin
 
-# --- OPTIMIZACION DE MEMORIA (CRITICO) ---
-
-# 1. Base de Datos: Maximo 2 conexiones para ahorrar RAM
-spring.datasource.hikari.maximum-pool-size=2
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=10000
-
-# 2. Servidor Web: Reducimos hilos de Tomcat
-server.tomcat.threads.max=10
-server.tomcat.threads.min-spare=2
-
-# 3. Hibernate: Desactivar cache y estadisticas
-spring.jpa.properties.hibernate.cache.use_second_level_cache=false
-spring.jpa.properties.hibernate.generate_statistics=false
-spring.jpa.open-in-view=false
-
-app.tools.ytdlp=/usr/local/bin/yt-dlp
-app.tools.ffmpeg=/usr/bin/ffmpeg
+# --- AJUSTES DE ARCHIVOS ---
+# Permitir subidas/bajadas grandes (Videos HD)
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
